tests/snapshots/protocols__typecheck__tests__invalid_step_arg.snap
---
source: src/typecheck.rs
expression: content
---
error: Cannot assign to function argument. Try using assert_eq if you want to check the value of a transaction output.
  ┌─ tests/invalid_step_arg.prot:6:3
  │
6 │   a := b;
  │   ^^^^^^^ Cannot assign to function argument. Try using assert_eq if you want to check the value of a transaction output.

error: Incorrect value to step
  ┌─ tests/invalid_step_arg.prot:8:8
  │
8 │   step(0);
  │        ^ Incorrect value to step

error: Cannot assign to function argument. Try using assert_eq if you want to check the value of a transaction output.
  ┌─ tests/invalid_step_arg.prot:9:3
  │
9 │   s := 0;
  │   ^^^^^^^ Cannot assign to function argument. Try using assert_eq if you want to check the value of a transaction output.
